[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/blasterBoxTexture.png" type="Texture" id=1]
[ext_resource path="res://assets/blaster.png" type="Texture" id=2]
[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/black.png" type="Texture" id=4]
[ext_resource path="res://Objects/UIBox.gd" type="Script" id=5]
[ext_resource path="res://Objects/ItemLabel.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.5, 37.5 )

[node name="UIBox" type="Node2D" groups=["UIBox"]]
script = ExtResource( 5 )

[node name="Box" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="Box"]
margin_left = -38.0
margin_top = -36.0
margin_right = 37.0
margin_bottom = 39.0
texture = ExtResource( 1 )

[node name="ItemSprite" type="AnimatedSprite" parent="Box"]
rotation = 1.5708
frames = SubResource( 1 )

[node name="ItemLabel" type="RichTextLabel" parent="."]
margin_left = -74.0
margin_top = 46.0
margin_right = 73.0
margin_bottom = 79.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Blaster x4"
text = "Blaster x4"
script = ExtResource( 6 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 3 )

[node name="HoverBox" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = -38.0
margin_top = -36.0
margin_right = 38.0
margin_bottom = 39.0
texture = ExtResource( 4 )

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
